@@ -198,6 +198,8 @@ Packages/Random_numbers/Makefile
 Packages/Random_numbers/bin
 Packages/Random_numbers/doc_ps
 Packages/Surface_mesher/doxygen
+Packages/Surface_mesher/examples/Surface_mesher/implicit_surface_mesher
+Packages/Surface_mesher/examples/Surface_mesher/polyhedral_surface_mesher
 Packages/Surface_mesher/examples/Surface_mesher/surface_mesher
 Packages/Tutorial/tutorial/Polyhedron/sgp2004/paper/paper.aux
 Packages/Tutorial/tutorial/Polyhedron/sgp2004/paper/paper.bbl
